--- a/TEMPLATES/home/home.html
+++ b/TEMPLATES/home/home.html
@@ -13,7 +13,7 @@
                 <a href="{" class="btn btn-outline-success btn-lg">{% trans "Quick Facts" %}</a>
             </div>
             <div class="col-lg-6">
-                <img src="{% static 'images/hero-image.svg' %}" alt="Nuclear Applications" class="img-fluid">
+                <img src="{% static 'img/test1.webp' %}" alt="Nuclear Applications" class="img-fluid">
             </div>
         </div>
     </div>
