--- a/TEMPLATES/base.html
+++ b/TEMPLATES/base.html
@@ -17,11 +17,11 @@
         <div class="container">
             <div class="d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                    <img src="{% static 'images/logo.png' %}" alt="InnovaTide Logo" height="40" class="me-2">
+                    <img src="{% static 'img/logos.png' %}" alt="InnovaTide Logo" height="55" class="me-2">
                     <h1 class="h4 mb-0">InnovaTide</h1>
                 </div>
                 <div class="d-flex align-items-center">
-                    <form class="d-flex me-3" action="" method="get">
+                    <form class="d-flex me-3" action="/search/" method="get">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
                         <button class="btn btn-light" type="submit">Search</button>
                     </form>
@@ -56,10 +56,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="">{% trans "Home" %}</a>
+                        <a class="nav-link" href="/">{% trans "Home" %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">{% trans "About" %}</a>
+                        <a class="nav-link" href="/about/">{% trans "About" %}</a>
                     </li>
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="applicationsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -72,13 +72,13 @@
                     </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">{% trans "Projects" %}</a>
+                        <a class="nav-link" href="/projects/">{% trans "Projects" %}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">{% trans "News & Media" %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">{% trans "Flashcards" %}</a>
+                        <a class="nav-link" href="/flashcards/">{% trans "Flashcards" %}</a>
                     </li>
                 </ul>
             </div>
