--- a/TEMPLATES/home/contact.html
+++ b/TEMPLATES/home/contact.html
@@ -16,9 +16,9 @@
                             <div class="card-body">
                                 <h3 class="h5 text-success mb-3">{% trans "Headquarters" %}</h3>
                                 <address>
-                                    <p>123 Technology Park<br>
-                                    Vienna, Austria 1400</p>
-                                    <p><i class="fas fa-phone text-success me-2"></i> +43 1 1234567</p>
+                                    <p>InnovaTide<br>
+                                    Nyarugenge, Kigali, Rwanda</p>
+                                    <p><i class="fas fa-phone text-success me-2"></i> +250 792061500</p>
                                     <p><i class="fas fa-envelope text-success me-2"></i> info@innovatide.com</p>
                                 </address>
                             </div>
@@ -44,12 +44,9 @@
                 <div class="card mt-4 border-0 shadow-sm">
                     <div class="card-body">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2659.093266079525!2d16.35646931558985!3d48.20905577922939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d07986fcad78b%3A0x73f5a4d267cc4174!2sIAEA!5e0!3m2!1sen!2sus!4v1620000000000!5m2!1sen!2sus" 
-                                    width="100%" 
-                                    height="300" 
-                                    style="border:0;" 
-                                    allowfullscreen="" 
-                                    loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33485.85032762422!2d30.05707931590522!3d-1.958930730532952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca67dca6324cd%3A0x2510bd8012b3c1fd!2sUniversity%20of%20Rwanda!5e0!3m2!1sen!2srw!4v1750366694884!5m2!1sen!2srw"
+                             width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            
                         </div>
                     </div>
                 </div>
